<?xml version="1.0" encoding="utf-8"?>
<com.happy.bwiesample.wigdet.ResideLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.activity.MainActivity">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerVertical="true"
               android:orientation="vertical"
               android:paddingTop="160dp"
               android:paddingLeft="15dp"
               android:background="@mipmap/bg_blue">
               <TextView
                   android:id="@+id/main_tv_collect"
                   style="@style/MenuStyle"
                   android:text="@string/collection" />

               <TextView
                   android:id="@+id/main_tv_mydown"
                   style="@style/MenuStyle"
                   android:text="@string/download" />

               <TextView
                   android:id="@+id/main_tv_fuli"
                   style="@style/MenuStyle"
                   android:text="@string/fuli" />

               <TextView
                   android:id="@+id/main_tv_share"
                   style="@style/MenuStyle"
                   android:text="@string/share" />

               <TextView
                   android:id="@+id/main_tv_feedback"
                   style="@style/MenuStyle"
                   android:text="@string/feedback" />
               <TextView
                   android:id="@+id/main_tv_vr"
                   style="@style/MenuStyle"
                   android:text="@string/vr" />

               <TextView
                   android:id="@+id/main_tv_setting"
                   style="@style/MenuStyle"
                   android:text="@string/setting" />

           </LinearLayout>

       <LinearLayout
           android:id="@+id/bottom_menu"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="@dimen/activity_vertical_margin"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/about"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="25dp"
               android:padding="12dp"
               android:text="关于"
               android:textColor="@android:color/white"
               android:textSize="16sp" />

           <TextView
               android:id="@+id/theme"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:padding="12dp"
               android:text="主题"
               android:textColor="@android:color/white"
               android:textSize="16sp" />

       </LinearLayout>

   </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/bg_colorful">
        <FrameLayout
            android:id="@+id/main_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></FrameLayout>
        <RadioGroup
            android:id="@+id/main_rg"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/bottom_bg"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_rb_1"
                style="@style/tab_rb_style"
                android:checked="true"
                android:drawableTop="@drawable/tab_02"
                android:text="精选" />

            <RadioButton
                android:id="@+id/main_rb_2"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_03"
                android:text="专题" />

            <RadioButton
                android:id="@+id/main_rb_3"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_01"
                android:text="发现" />

            <RadioButton
                android:id="@+id/main_rb_4"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_04"
                android:text="我的" />

        </RadioGroup>


    </LinearLayout>
</com.happy.bwiesample.wigdet.ResideLayout>
